# Programming-Labs_ZU9Q

./: .gitignore  LICENSE  Labs.sln  README.MD
Algorithms and data structures/List and array/: CMakeLists.txt
Algorithms and data structures/List and array/src/: Array.cpp  Array.h  LinkedList.cpp  LinkedList.h  Tasks.cpp  Tasks.h
Algorithms and data structures/List and array/tests/: ArrayTest.cpp  LinkedListTest.cpp  TasksTest.cpp
C++/part 2/Lab7/: CMakeLists.txt
C++/part 2/Lab7/srcs/: IDGenerator.cpp  IDGenerator.h  Log.h
C++/part 2/Lab7/srcs/Model/: ISchedule.h
C++/part 2/Lab7/srcs/ViewModel/: PCViewModel.h  UserViewModel.cpp  ViewModel.cpp  ViewModel.h
C++/part 2/Lab7/tests/: PCTests.cpp  PCTests.h  PCViewModelTests.h  UserTests.h  test_main.cpp
Lab1/: Lab1.vcxproj  Lab1.vcxproj.filters  main.cpp
Lab2/: Altrernative.h  CMakeLists.txt  Lab2.vcxproj  Lab2.vcxproj.filters  Task.h  alt_task2.cpp  main.cpp  task1.cpp  task2.cpp  task3.cpp  task_add.cpp
Lab3/: CMakeLists.txt  Lab3.vcxproj  Lab3.vcxproj.filters  Task.h  main.cpp  task1.cpp  task_add.cpp
Lab4/: Lab4.vcxproj  Task.h  base_task.cpp  hard_task.cpp  main.cpp
Lab5/: Lab5.vcxproj  Lab5.vcxproj.filters  (+5 more)
Numerical methods/Linear algebra methods/src/: CMakeLists.txt  direct.cpp  eigen.cpp  hw2.cpp  iterative.cpp
Numerical methods/Linear algebra methods/src/src/: Buffer.h  Cholesky.h  Eigen.h  Gauss.h  Matrix.h  MatrixUtils.h  MatrixView.h  Polynomial.h  PolynomialSolvers.h  Solvers.h  Utils.h  Vector.h
Numerical methods/Linear algebra methods/src/test/: BuffetTests.cpp  CMakeLists.txt  CholeskyTests.cpp  MatrixTests.cpp  SubstitutionTests.cpp  VectorTests.cpp  main.cpp
part 2/Lab1/: CMakeLists.txt
part 2/Lab1/src/: Rectangle.cpp
(+265 files in other folders)
